--- a/src/pragma.sqlite/pragma.sqlite.csproj
+++ b/src/pragma.sqlite/pragma.sqlite.csproj
@@ -41,15 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Costura.Fody" Version="5.7.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.6" />
-    <PackageReference Include="SQLitePCLRaw.bundle_sqlite3" Version="2.1.0">
-      <TreatAsUsed>true</TreatAsUsed>
-    </PackageReference>
-    <PackageReference Include="Virtuosity.Fody" Version="3.1.1" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
