--- a/src/pragma.sqlite/pragma.sqlite.csproj
+++ b/src/pragma.sqlite/pragma.sqlite.csproj
@@ -14,19 +14,31 @@
     <PlatformTarget>x64</PlatformTarget>
     <Nullable>enable</Nullable>
     <PackageIcon>tick.png</PackageIcon>
-    <SignAssembly>True</SignAssembly>
+    <SignAssembly>False</SignAssembly>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Copyright>2022</Copyright>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/anytizer/pragma.sqlite</RepositoryUrl>
+    <PackageTags>prgama, sqlite, .db-file</PackageTags>
+    <NeutralLanguage>en-CA</NeutralLanguage>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>False</Optimize>
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DebugType>full</DebugType>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <FileAlignment>1024</FileAlignment>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DebugType>full</DebugType>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <FileAlignment>1024</FileAlignment>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,6 +46,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\..\resources\tick.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
