--- a/src/pragma.sqlite/pragma.sqlite.csproj
+++ b/src/pragma.sqlite/pragma.sqlite.csproj
@@ -6,15 +6,14 @@
     <UseWindowsForms>true</UseWindowsForms>
     <PublishSingleFile>true</PublishSingleFile>
     <StartupObject>pragma.sqlite.Program</StartupObject>
-    <ApplicationIcon>viewer.ico</ApplicationIcon>
     <IsPublishable>False</IsPublishable>
     <ErrorReport>none</ErrorReport>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Table Viewer for SQLite</Title>
     <PlatformTarget>x64</PlatformTarget>
     <Nullable>enable</Nullable>
     <PackageIcon>tick.png</PackageIcon>
-    <SignAssembly>False</SignAssembly>
+    <SignAssembly>True</SignAssembly>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Copyright>2022</Copyright>
@@ -24,6 +23,9 @@
     <NeutralLanguage>en-CA</NeutralLanguage>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <ApplicationIcon>viewer.ico</ApplicationIcon>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <AssemblyOriginatorKeyFile></AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -49,6 +51,7 @@
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="..\..\resources\tick.png">
       <Pack>True</Pack>
