--- a/src/pragma.sqlite/pragma.sqlite.csproj
+++ b/src/pragma.sqlite/pragma.sqlite.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -26,6 +26,7 @@
     <ApplicationIcon>viewer.ico</ApplicationIcon>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <AssemblyOriginatorKeyFile></AssemblyOriginatorKeyFile>
+    <AssemblyName>pragma</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
